Timer update; TimerService

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="Cycles">Cycles</string>
     <string name="Sets">Sets</string>
     <string name="SetsRelax">Rest between sets</string>
+    <string name="Finish">Finish</string>
 </resources>
